--- a/upload/LPCandy/pages/12/templates/page.yaml
+++ b/upload/LPCandy/pages/12/templates/page.yaml
@@ -23,7 +23,7 @@ container#header:
         form_button#id1374247667769:
             label: Хочу с вами работать!
 container#sheet:
-    container#id1372956874472:
+    container#benefits:
         html#id1372956874473: <h2>В чем отличия нашей компании:</h2>
         html#id1372959623730: "<p><b>Опыт сложной разработки</b></p>\r\n<p>Мы уже
             давно находимся на рынке и всегда стремились брать качеством, а не количеством
