--- a/view/assets/tea/makefile.tea
+++ b/view/assets/tea/makefile.tea
@@ -170,6 +170,70 @@ form {
     padding: 0;
 }
 
+.pagination {
+    margin-bottom:0.5em;
+    clear: both;
+    overflow: hidden;
+
+    ul {
+        display:block;
+        margin: 0;
+
+        li {
+            display:block;
+            float:left;
+            width: auto;
+            min-width:25px;
+            margin:2px;
+            text-align:center;
+            background:#fff;
+            border:1px solid #aaa; 
+            line-height:1.5em; 
+            font-size:12px;
+            border-radius:5px;
+            
+            a {
+                color:#333;
+                text-decoration: none;
+            }
+            
+            &.current {
+                background: @color(1,10);
+            }
+            
+        }
+    }
+}
+
+table.list tbody {
+    tr.filter {
+        th {
+            background: @color(1,14);
+        }
+        button {
+            .button({color:color(1,8)});
+        }
+        input,select {
+            margin: 0;
+        }
+    }
+}
+
+.sort-field {
+    text-decoration: none;
+    white-space: nowrap;
+    
+    &.ASC:after {
+        content: " ▲";
+    }
+
+    &.DESC:after {
+        content: " ▼";
+    }
+}
+    
+
+
 table.list {
     border-radius: 0;
     td, th {
