--- a/view/assets/tea/makefile.tea
+++ b/view/assets/tea/makefile.tea
@@ -1,9 +1,24 @@
-@import "/~boomyjee/templater/lib/modules/core/style/tea/bake.tea";
-@import "utils";
+@import "/~boomyjee/templater/lib/modules/core/style/tea/bake.min.js";
 
 @ color1 = '#123';
 @ color2 = '#f90';
 @ sheetWidth = 760;
+
+.background_striped(size,width,color) {
+    @{
+        var canvas = (new Canvas(size,size))
+        .draw2D(function(ctx){
+            ctx.beginPath();
+            ctx.lineWidth = width;
+            ctx.strokeStyle = color.toString();
+            ctx.moveTo(-size,-size); ctx.lineTo(size*2,size*2);
+            ctx.moveTo(-size-size,-size); ctx.lineTo(size,size*2);
+            ctx.moveTo(-size+size,-size); ctx.lineTo(size*3,size*2);
+            ctx.stroke();
+        });
+    }
+    background-image: url(@{canvas.toDataURL()});
+}
 
 .reset();
 .typography();
@@ -56,10 +71,6 @@ body {
             .logo({type:"image",image:tea.dir+"../images/lpcandy.png"});
             float: left;
         }  
-        
-        #cloud {
-            .cloud(color(1,11),160);
-        }
     }
 }
 
@@ -106,6 +117,7 @@ body {
     }
 }
 
+// login styles
 #logged_info {
     background: none repeat scroll 0 0 #333333;
     border-bottom: 2px solid #777777;
@@ -119,13 +131,48 @@ body {
     color: #aaa;
     white-space: nowrap;
     z-index: 50000;
-    
-    a {
-        color: #FFFFFF;
-        text-decoration: none;
-    }    
 }
 
+#logged_info a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.user .no-user,
+.no-user .user { display: none }
+
+#login_overlay {
+    position: fixed;
+    left: 0; 
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.3);
+    z-index:9999;
+}
+
+#login_popup {
+    box-sizing: content-box;
+    position: fixed;
+    width: 400px;
+    height: 160px;
+    padding: 40px;
+    background: white;
+    border: 1px solid #eee;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.3);
+    z-index: 10000;
+    top: 50%;
+    left: 50%;
+    margin-top: -120px;
+    margin-left: -240px;
+}
+
+#login_popup iframe {
+    width: 400px;
+    height: 160px;
+}
+
+// content
 #content {
     > h3 {
         background: #333;
