FIX:mceLayout margin

--- a/view/assets/tea/makefile.tea
+++ b/view/assets/tea/makefile.tea
@@ -35,8 +35,9 @@ form {
     input[type="text"],select,textarea {
         max-width: 600px;
     }
-    .mceLayout {
+    .mceEditor .mceLayout {
         max-width: 1200px;
+        margin-bottom: 0.8em;
     }
     
     .browse_wrap {
