FIX: preview iframe top

--- a/view/assets/tea/makefile.tea
+++ b/view/assets/tea/makefile.tea
@@ -171,14 +171,14 @@ body {
     position: absolute;
     bottom: 0px;
     left: 170px; right: 0px;
-    padding: 5px 20px;
 
     border-top: 5px solid @color(1,11);
     background: #333;
     
     text-align: center;
-    height: 40px;
-    line-height: 40px;
+    box-sizing: border-box;
+    height: 55px;
+    line-height: 50px;
     
     #beejee_info {
         color: #aaa;
