https://trello.com/c/lCXJkZdK/230-ff-overflow-hidden

--- a/view/assets/tea/makefile.tea
+++ b/view/assets/tea/makefile.tea
@@ -180,6 +180,8 @@ body {
     height: 55px;
     line-height: 50px;
     
+    overflow: hidden;
+    
     #beejee_info {
         color: #aaa;
         display: inline-block;
