--- a/view/assets/tea/makefile.tea
+++ b/view/assets/tea/makefile.tea
@@ -369,8 +369,9 @@ p.actions {
     
     label {
         width: 240px;
-        float: left;
-        margin: 0 10px 10px 0;
+        display: inline-block;
+        vertical-align: top;
+        margin: 0 10px 20px 0;
         position: relative;
         padding-top: 160px;
         text-align: center;
