'bundler relative paths system'

--- a/public/editor/components/style/makefile.tea
+++ b/public/editor/components/style/makefile.tea
@@ -12,6 +12,8 @@
 @ headingFont = 'Open Sans,' + primaryFont;
 @ subHeadingFont = 'Open Sans Light,' + primaryFont;
 
+@import "../../../../test";
+
 @import "common/base";
 @import "common/grid";
 @import "common/reset";
