'show home landing page in iframe'

--- a/front/lpcandy/makefile.tea
+++ b/front/lpcandy/makefile.tea
@@ -391,3 +391,9 @@ p.actions {
         }
     }
 }
+
+#home-landing {
+    position: fixed;
+    width: calc(100vw - 170px);
+    height: 100vh;
+}
